// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse JSX Image 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "ref": Object {
              "code": "pictureRef",
            },
          },
          "children": Array [
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
        ",
              },
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {
                "when": Object {
                  "code": "!state.useLazyLoading() || state.load",
                },
              },
              "children": Array [
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
          ",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {
                    "alt": Object {
                      "code": "props.altText",
                    },
                    "aria-role": Object {
                      "code": "props.altText ? 'presentation' : undefined",
                    },
                    "class": Object {
                      "code": "'builder-image' + (props._class ? ' ' + props._class : '')",
                    },
                    "css": Object {
                      "code": "{
  opacity: '1',
  transition: 'opacity 0.2s ease-in-out',
  objectFit: 'cover',
  objectPosition: 'center'
}",
                    },
                    "onLoad": Object {
                      "code": "state.setLoaded()",
                    },
                    "sizes": Object {
                      "code": "props.sizes",
                    },
                    "src": Object {
                      "code": "props.image",
                    },
                    "srcset": Object {
                      "code": "props.srcset",
                    },
                  },
                  "children": Array [],
                  "meta": Object {},
                  "name": "img",
                  "properties": Object {},
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
        ",
                  },
                  "scope": Object {},
                },
              ],
              "meta": Object {},
              "name": "Show",
              "properties": Object {},
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
        ",
              },
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {
                "srcset": Object {
                  "code": "props.srcset",
                },
              },
              "children": Array [],
              "meta": Object {},
              "name": "source",
              "properties": Object {},
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
      ",
              },
              "scope": Object {},
            },
          ],
          "meta": Object {},
          "name": "picture",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "_text": Object {
              "code": "props.children",
            },
          },
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
    ",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "Fragment",
      "properties": Object {},
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {
    "onMount": Object {
      "code": "
  if (state.useLazyLoading()) {
    // throttled scroll capture listener
    const listener = () => {
      if (pictureRef) {
        const rect = pictureRef.getBoundingClientRect();
        const buffer = window.innerHeight / 2;

        if (rect.top < window.innerHeight + buffer) {
          setLoad(true);
          state.scrollListener = null;
          window.removeEventListener('scroll', listener);
        }
      }
    };

    state.scrollListener = listener;
    window.addEventListener('scroll', listener, {
      capture: true,
      passive: true
    });
    listener();
  }
",
    },
    "onUnMount": Object {
      "code": "
  if (state.scrollListener) {
    window.removeEventListener('scroll', state.scrollListener);
  }
",
    },
  },
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "Image",
  "propsTypeRef": "ImageProps",
  "refs": Object {
    "pictureRef": Object {
      "argument": "",
      "typeParameter": "HTMLElement",
    },
  },
  "state": Object {
    "imageLoaded": Object {
      "code": false,
      "type": "property",
    },
    "isBrowser": Object {
      "code": "@builder.io/mitosis/function:function isBrowser() {
  return typeof window !== 'undefined' && window.navigator.product != 'ReactNative';
}",
      "type": "function",
    },
    "load": Object {
      "code": false,
      "type": "property",
    },
    "scrollListener": Object {
      "code": null,
      "type": "property",
    },
    "setLoaded": Object {
      "code": "@builder.io/mitosis/method:setLoaded() {
  state.imageLoaded = true;
}",
      "type": "method",
    },
    "useLazyLoading": Object {
      "code": "@builder.io/mitosis/method:useLazyLoading() {
  // TODO: Add more checks here, like testing for real web browsers
  return !!props.lazy && isBrowser();
}",
      "type": "method",
    },
  },
  "subComponents": Array [],
  "types": Array [
    "// TODO: AMP Support?
export interface ImageProps {
  _class?: string;
  image: string;
  sizes?: string;
  lazy?: boolean;
  height?: number;
  width?: number;
  altText?: string;
  backgroundSize?: string;
  backgroundPosition?: string; // TODO: Support generating Builder.io and or Shopify \`srcset\`s when needed

  srcset?: string; // TODO: Implement support for custom aspect ratios

  aspectRatio?: number; // TODO: This might not work as expected in terms of positioning

  children?: any;
}",
  ],
}
`;

exports[`Parse JSX custom mitosis package 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "Hello ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "_text": Object {
              "code": "state.name",
            },
          },
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "! I can run in React, Qwik, Vue, Solid, or Liquid!",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "div",
      "properties": Object {},
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {},
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "MyBasicComponent",
  "refs": Object {},
  "state": Object {
    "name": Object {
      "code": "PatrickJS",
      "type": "property",
    },
  },
  "subComponents": Array [],
}
`;

exports[`Parse JSX metadata 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "when": Object {
              "code": "props.link",
            },
          },
          "children": Array [
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
        ",
              },
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {
                "_spread": Object {
                  "code": "props.attributes",
                },
                "href": Object {
                  "code": "props.link",
                },
                "target": Object {
                  "code": "props.openLinkInNewTab ? '_blank' : undefined",
                },
              },
              "children": Array [
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
          ",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {
                    "_text": Object {
                      "code": "props.text",
                    },
                  },
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {},
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
        ",
                  },
                  "scope": Object {},
                },
              ],
              "meta": Object {},
              "name": "a",
              "properties": Object {},
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
      ",
              },
              "scope": Object {},
            },
          ],
          "meta": Object {},
          "name": "Show",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "when": Object {
              "code": "!props.link",
            },
          },
          "children": Array [
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
        ",
              },
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {
                "_spread": Object {
                  "code": "props.attributes",
                },
              },
              "children": Array [
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
          ",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {
                    "_text": Object {
                      "code": "props.text",
                    },
                  },
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {},
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
        ",
                  },
                  "scope": Object {},
                },
              ],
              "meta": Object {},
              "name": "button",
              "properties": Object {
                "type": "button",
              },
              "scope": Object {},
            },
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [],
              "meta": Object {},
              "name": "div",
              "properties": Object {
                "_text": "
      ",
              },
              "scope": Object {},
            },
          ],
          "meta": Object {},
          "name": "Show",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
    ",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "Fragment",
      "properties": Object {},
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {},
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {
    "useMetadata": Object {
      "foo": Object {
        "bar": "baz",
      },
    },
  },
  "name": "Button",
  "propsTypeRef": "ButtonProps",
  "refs": Object {},
  "state": Object {},
  "subComponents": Array [],
  "types": Array [
    "export interface ButtonProps {
  attributes?: any;
  text?: string;
  link?: string;
  openLinkInNewTab?: boolean;
}",
  ],
}
`;

exports[`Parse JSX onUpdate return 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "Hello! ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "_text": Object {
              "code": "state.name",
            },
          },
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {},
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "div",
      "properties": Object {},
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {
    "onUpdate": Array [
      Object {
        "code": "
  const controller = new AbortController();
  const signal = controller.signal;
  fetch('https://patrickjs.com/api/resource.json', {
    signal
  }).then(response => response.json()).then(data => {
    state.name = data.name;
  });
  return () => {
    if (!signal.aborted) {
      controller.abort();
    }
  };
",
        "deps": "[state.name]",
      },
    ],
  },
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "MyBasicOnUpdateReturnComponent",
  "refs": Object {},
  "state": Object {
    "name": Object {
      "code": "PatrickJS",
      "type": "property",
    },
  },
  "subComponents": Array [],
}
`;

exports[`Parse JSX parseStateObject 1`] = `
Object {
  "allRegisteredComponents": Object {
    "code": "@builder.io/mitosis/method:get allRegisteredComponents() {
  const allComponentsArray = [...getDefaultRegisteredComponents(), // While this \`components\` object is deprecated, we must maintain support for it.
  // Since users are able to override our default components, we need to make sure that we do not break such
  // existing usage.
  // This is why we spread \`components\` after the default Builder.io components, but before the \`props.customComponents\`,
  // which is the new standard way of providing custom components, and must therefore take precedence.
  ...components, ...(props.customComponents || [])];
  const allComponents = allComponentsArray.reduce((acc, curr) => ({ ...acc,
    [curr.name]: curr
  }), ({} as RegisteredComponents));
  return allComponents;
}",
    "type": "getter",
  },
  "canTrackToUse": Object {
    "code": "@builder.io/mitosis/method:get canTrackToUse() {
  return props.canTrack || true;
}",
    "type": "getter",
  },
  "contentState": Object {
    "code": "@builder.io/mitosis/method:get contentState() {
  return { ...props.content?.data?.state,
    ...props.data,
    ...state.overrideState
  };
}",
    "type": "getter",
  },
  "contextContext": Object {
    "code": "@builder.io/mitosis/method:get contextContext() {
  return props.context || {};
}",
    "type": "getter",
  },
  "emitStateUpdate": Object {
    "code": "@builder.io/mitosis/method:emitStateUpdate() {
  if (isEditing()) {
    window.dispatchEvent(new CustomEvent<BuilderComponentStateChange>('builder:component:stateChange', {
      detail: {
        state: state.contentState,
        ref: {
          name: props.model
        }
      }
    }));
  }
}",
    "type": "method",
  },
  "evalExpression": Object {
    "code": "@builder.io/mitosis/method:evalExpression(expression: string) {
  return expression.replace(/{{([^}]+)}}/g, (_match, group) => evaluate({
    code: group,
    context: state.contextContext,
    state: state.contentState
  }));
}",
    "type": "method",
  },
  "evaluateJsCode": Object {
    "code": "@builder.io/mitosis/method:evaluateJsCode() {
  // run any dynamic JS code attached to content
  const jsCode = state.useContent?.data?.jsCode;

  if (jsCode) {
    evaluate({
      code: jsCode,
      context: state.contextContext,
      state: state.contentState
    });
  }
}",
    "type": "method",
  },
  "forceReRenderCount": Object {
    "code": 0,
    "type": "property",
  },
  "handleRequest": Object {
    "code": "@builder.io/mitosis/method:handleRequest({
  url,
  key
}: {
  key: string;
  url: string;
}) {
  const fetchAndSetState = async () => {
    const fetch = await getFetch();
    const response = await fetch(url);
    const json = await response.json();
    const newOverrideState = { ...state.overrideState,
      [key]: json
    };
    state.overrideState = newOverrideState;
  };

  fetchAndSetState();
}",
    "type": "method",
  },
  "httpReqsData": Object {
    "code": "@builder.io/mitosis/method:get httpReqsData() {
  return {};
}",
    "type": "getter",
  },
  "onClick": Object {
    "code": "@builder.io/mitosis/method:onClick(_event: MouseEvent) {
  if (state.useContent) {
    track({
      type: 'click',
      canTrack: state.canTrackToUse,
      contentId: state.useContent.id,
      orgId: props.apiKey
    });
  }
}",
    "type": "method",
  },
  "overrideContent": Object {
    "code": null,
    "type": "property",
  },
  "overrideState": Object {
    "code": Object {},
    "type": "property",
  },
  "processMessage": Object {
    "code": "@builder.io/mitosis/method:processMessage(event: MessageEvent) {
  const {
    data
  } = event;

  if (data) {
    switch (data.type) {
      case 'builder.contentUpdate':
        {
          const messageContent = data.data;
          const key = messageContent.key || messageContent.alias || messageContent.entry || messageContent.modelName;
          const contentData = messageContent.data;

          if (key === props.model) {
            state.overrideContent = contentData;
          }

          break;
        }

      case 'builder.patchUpdates':
        {
          // TODO
          break;
        }
    }
  }
}",
    "type": "method",
  },
  "runHttpRequests": Object {
    "code": "@builder.io/mitosis/method:runHttpRequests() {
  const requests = state.useContent?.data?.httpRequests ?? {};
  Object.entries(requests).forEach(([key, url]) => {
    if (url && (!state.httpReqsData[key] || isEditing())) {
      const evaluatedUrl = state.evalExpression(url);
      state.handleRequest({
        url: evaluatedUrl,
        key
      });
    }
  });
}",
    "type": "method",
  },
  "shouldRenderContentStyles": Object {
    "code": "@builder.io/mitosis/method:get shouldRenderContentStyles() {
  return Boolean((state.useContent?.data?.cssCode || state.useContent?.data?.customFonts?.length) && TARGET !== 'reactNative');
}",
    "type": "getter",
  },
  "update": Object {
    "code": 0,
    "type": "property",
  },
  "useContent": Object {
    "code": "@builder.io/mitosis/method:get useContent() {
  const mergedContent: BuilderContent = { ...props.content,
    ...state.overrideContent,
    data: { ...props.content?.data,
      ...props.data,
      ...state.overrideContent?.data
    }
  };
  return mergedContent;
}",
    "type": "getter",
  },
}
`;

exports[`Parse JSX useRef 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {},
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "when": Object {
              "code": "props.showInput",
            },
          },
          "children": Array [
            Object {
              "@type": "@builder.io/mitosis/node",
              "bindings": Object {},
              "children": Array [
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
          ",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {
                    "css": Object {
                      "code": "{
  color: 'red'
}",
                    },
                    "onBlur": Object {
                      "arguments": Array [
                        "event",
                      ],
                      "code": "state.onBlur()",
                    },
                    "onChange": Object {
                      "arguments": Array [
                        "event",
                      ],
                      "code": "state.name = event.target.value",
                    },
                    "ref": Object {
                      "code": "inputRef",
                    },
                    "value": Object {
                      "code": "state.name",
                    },
                  },
                  "children": Array [],
                  "meta": Object {},
                  "name": "input",
                  "properties": Object {},
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "

          ",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {
                    "ref": Object {
                      "code": "inputNoArgRef",
                    },
                  },
                  "children": Array [
                    Object {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": Object {},
                      "children": Array [],
                      "meta": Object {},
                      "name": "div",
                      "properties": Object {
                        "_text": "
            Choose a car:
          ",
                      },
                      "scope": Object {},
                    },
                  ],
                  "meta": Object {},
                  "name": "label",
                  "properties": Object {
                    "for": "cars",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "

          ",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [
                    Object {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": Object {},
                      "children": Array [],
                      "meta": Object {},
                      "name": "div",
                      "properties": Object {
                        "_text": "
            ",
                      },
                      "scope": Object {},
                    },
                    Object {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": Object {},
                      "children": Array [
                        Object {
                          "@type": "@builder.io/mitosis/node",
                          "bindings": Object {},
                          "children": Array [],
                          "meta": Object {},
                          "name": "div",
                          "properties": Object {
                            "_text": "GR Supra",
                          },
                          "scope": Object {},
                        },
                      ],
                      "meta": Object {},
                      "name": "option",
                      "properties": Object {
                        "value": "supra",
                      },
                      "scope": Object {},
                    },
                    Object {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": Object {},
                      "children": Array [],
                      "meta": Object {},
                      "name": "div",
                      "properties": Object {
                        "_text": "
            ",
                      },
                      "scope": Object {},
                    },
                    Object {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": Object {},
                      "children": Array [
                        Object {
                          "@type": "@builder.io/mitosis/node",
                          "bindings": Object {},
                          "children": Array [],
                          "meta": Object {},
                          "name": "div",
                          "properties": Object {
                            "_text": "GR 86",
                          },
                          "scope": Object {},
                        },
                      ],
                      "meta": Object {},
                      "name": "option",
                      "properties": Object {
                        "value": "86",
                      },
                      "scope": Object {},
                    },
                    Object {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": Object {},
                      "children": Array [],
                      "meta": Object {},
                      "name": "div",
                      "properties": Object {
                        "_text": "
          ",
                      },
                      "scope": Object {},
                    },
                  ],
                  "meta": Object {},
                  "name": "select",
                  "properties": Object {
                    "id": "cars",
                    "name": "cars",
                  },
                  "scope": Object {},
                },
                Object {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": Object {},
                  "children": Array [],
                  "meta": Object {},
                  "name": "div",
                  "properties": Object {
                    "_text": "
        ",
                  },
                  "scope": Object {},
                },
              ],
              "meta": Object {},
              "name": "Fragment",
              "properties": Object {},
              "scope": Object {},
            },
          ],
          "meta": Object {},
          "name": "Show",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      Hello
      ",
          },
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {
            "_text": Object {
              "code": "state.lowerCaseName()",
            },
          },
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {},
          "scope": Object {},
        },
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "! I can run in React, Qwik, Vue, Solid, or Web Component!
    ",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "div",
      "properties": Object {},
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {},
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "MyBasicRefComponent",
  "propsTypeRef": "Props",
  "refs": Object {
    "inputNoArgRef": Object {
      "argument": "null",
      "typeParameter": "HTMLLabelElement",
    },
    "inputRef": Object {
      "argument": "null",
      "typeParameter": "HTMLInputElement",
    },
  },
  "state": Object {
    "lowerCaseName": Object {
      "code": "@builder.io/mitosis/function:function lowerCaseName() {
  return state.name.toLowerCase();
}",
      "type": "function",
    },
    "name": Object {
      "code": "PatrickJS",
      "type": "property",
    },
    "onBlur": Object {
      "code": "@builder.io/mitosis/function:function onBlur() {
  // Maintain focus
  inputRef.focus();
}",
      "type": "function",
    },
  },
  "subComponents": Array [],
  "types": Array [
    "export interface Props {
  showInput: boolean;
}",
  ],
}
`;
